--- a/mithril-common/Cargo.toml
+++ b/mithril-common/Cargo.toml
@@ -70,6 +70,7 @@ mithril-stm = { path = "../mithril-stm", default-features = false, features = [
 
 [dev-dependencies]
 criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
+reqwest = { version = "0.11.22", features = ["json"] }
 slog-async = "2.8.0"
 slog-scope = "4.4.0"
 slog-term = "2.9.0"
