Add explorer lint checks in CI

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -102,13 +102,15 @@ jobs:
       
       - name: Test explorer
         working-directory: mithril-explorer
-        run: |
-          make test
+        run: make test
+
+      - name: Check explorer
+        working-directory: mithril-explorer
+        run: make lint
 
       - name: Build Explorer
         working-directory: mithril-explorer
-        run: |
-          make build
+        run: make build
 
       - name: Publish Explorer build
         uses: actions/upload-artifact@v3
