Create PoC crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ members = [
   "mithril-signer",
   "mithril-stm",
   "mithril-test-lab/mithril-end-to-end",
+  "poc-utxo-reader",
 ]
 
 [workspace.package]
