--- a/mithril-client/Cargo.toml
+++ b/mithril-client/Cargo.toml
@@ -9,12 +9,16 @@ homepage = { workspace = true }
 license = { workspace = true }
 repository = { workspace = true }
 
+[[bin]]
+name = "mithril-client"
+required-features = ["build-binary"]
+
 [dependencies]
 anyhow = "1.0.75"
 async-recursion = "1.0.5"
 async-trait = "0.1.73"
 chrono = { version = "0.4.31", features = ["serde"] }
-clap = { version = "4.4.6", features = ["derive", "env"] }
+clap = { version = "4.4.6", features = ["derive", "env"], optional = true }
 cli-table = "0.4.7"
 config = "0.13.3"
 directories = "5.0.1"
@@ -52,3 +56,4 @@ mockall = "0.11.4"
 [features]
 portable = ["mithril-common/portable"]
 bundle_openssl = ["dep:openssl", "dep:openssl-probe"]
+build-binary = ["clap"]
