--- a/mithril-common/Cargo.toml
+++ b/mithril-common/Cargo.toml
@@ -32,6 +32,7 @@ kes-summed-ed25519 = { version = "0.2.1", features = [
     "serde_enabled",
     "sk_clone_enabled",
 ] }
+mithril-stm = { path = "../mithril-stm" }
 mockall = "0.11.4"
 nom = "7.1.3"
 rand_chacha = "0.3.1"
@@ -58,10 +59,6 @@ typetag = "0.2.13"
 walkdir = "2.4.0"
 warp = "0.3.6"
 
-[target.'cfg(not(windows))'.dependencies]
-# non-windows: use default rug backend
-mithril-stm = { path = "../mithril-stm" }
-
 [target.'cfg(windows)'.dependencies]
 # Windows doesn't support rug backend, fallback to num-integer
 mithril-stm = { path = "../mithril-stm", default-features = false, features = [
@@ -87,3 +84,4 @@ portable = [
     "mithril-stm/portable",
 ] # portable feature avoids SIGILL crashes on CPUs not supporting Intel ADX instruction set when built on CPUs that support it
 allow_skip_signer_certification = []
+windows-compat = [ "mithril-stm/num-integer-backend" ]
