Wire crates.io composite action in pre-release.yml

--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -219,3 +219,25 @@ jobs:
           loki_ingest_host: ${{ vars.LOKI_INGEST_HOST }}
           loki_ingest_username: ${{ secrets.LOKI_INGEST_USERNAME }}
           loki_ingest_password: ${{ secrets.LOKI_INGEST_PASSWORD }}
+
+  publish-crate-test:
+    strategy:
+      fail-fast: false
+      matrix:
+        package: [ mithril-stm ]
+          
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Checkout sources
+        uses: actions/checkout@v3
+
+      - name: Install stable toolchain
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: stable
+        
+      - name: Publish package to crates.io
+        uses: ./.github/workflows/actions/publish-crate-package
+        with:
+          dry_run: "true"
+          package: ${{ matrix.package }}
