--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,55 +59,6 @@ jobs:
           file: ${{ env.DOCKER_FILE }}
           push: true
           tags: ${{ steps.meta.outputs.tags }}
-  
-  check-deploy-crates-io:
-    runs-on: ubuntu-22.04
-    outputs:
-      should-deploy: ${{ steps.check_version.outputs.should_deploy }}
-    steps:
-      - name: Checkout sources
-        uses: actions/checkout@v3
-
-      - name: Check crate latest version
-        id: check_version
-        run: |
-          LATEST_REMOTE_VERSION=$(wget -q -O - https://crates.io/api/v1/crates/mithril-stm | jq -r '.crate.newest_version')
-          LOCAL_VERSION=$(cargo metadata --quiet --no-deps | jq -r '.packages[] | select(.name=="mithril-stm") | .version')
-          echo "Latest crate.io version: $LATEST_REMOTE_VERSION"
-          echo "Local version: $LOCAL_VERSION"
-
-          if [ "$LOCAL_VERSION" != "$LATEST_REMOTE_VERSION" ]; then 
-            echo "Local version is newer than remote version: we will publish to crates.io"
-            echo "should_deploy=true" >> $GITHUB_OUTPUT
-          else
-            echo "Local version and remote version are the same: no need to publish to crates.io"
-            echo "should_deploy=false" >> $GITHUB_OUTPUT
-          fi
-  
-  deploy-crates-io:
-    runs-on: ubuntu-22.04
-    needs: check-deploy-crates-io
-    if: needs.check-deploy-crates-io.outputs.should-deploy == 'true'
-    steps:
-      - name: Checkout sources
-        uses: actions/checkout@v3
-
-      - name: Install stable toolchain
-        uses: dtolnay/rust-toolchain@master
-        with:
-          toolchain: stable
-
-      - name: Cargo publish dry run
-        shell: bash
-        run: cargo publish -p mithril-stm --dry-run
-
-      - name: Cargo package list
-        shell: bash
-        run: cargo package -p mithril-stm --list
-
-      - name: Cargo publish
-        shell: bash
-        run: cargo publish -p mithril-stm --token ${{ secrets.CRATES_IO_API_TOKEN }}
 
   deploy-release:
     strategy:
@@ -208,3 +159,29 @@ jobs:
           loki_ingest_host: ${{ vars.LOKI_INGEST_HOST }}
           loki_ingest_username: ${{ secrets.LOKI_INGEST_USERNAME }}
           loki_ingest_password: ${{ secrets.LOKI_INGEST_PASSWORD }}
+
+  publish-crate:
+    strategy:
+      fail-fast: false
+      matrix:
+        package: [ mithril-stm ]
+        include:
+        - package: mithril-stm
+          api_token_secret_name: CRATES_IO_API_TOKEN
+          
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Checkout sources
+        uses: actions/checkout@v3
+
+      - name: Install stable toolchain
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: stable
+        
+      - name: Publish package to crates.io
+        uses: ./.github/workflows/actions/publish-crate-package
+        with:
+          dry_run: "false"
+          package: ${{ matrix.package }}
+          api_token: ${{ secrets[matrix.api_token_secret_name] }}
