--- a/mithril-client/Dockerfile.ci
+++ b/mithril-client/Dockerfile.ci
@@ -3,14 +3,19 @@
 # on a debian-compatible x86-64 environment
 FROM debian:11-slim
 
-# Upgrade
-RUN apt-get update -y && apt-get install -y libssl-dev ca-certificates wget && rm -rf /var/lib/apt/lists/*
-
 # Create appuser
 RUN adduser --disabled-password appuser
 
+# Precreate workdir
+RUN mkdir -p /app/bin
+
+# Upgrade
+RUN apt-get update -y && apt-get install -y libssl-dev ca-certificates wget && apt-get clean && rm -rf /var/lib/apt/lists/*
+
 # Copy the executable
 COPY mithril-client/mithril-client /app/bin/mithril-client
+
+# Copy the config files
 COPY mithril-client/config /app/config
 
 # Workdir
