make `cli-table` crate to optional in Cargo.toml

--- a/mithril-client/Cargo.toml
+++ b/mithril-client/Cargo.toml
@@ -31,7 +31,7 @@ async-recursion = "1.0.5"
 async-trait = "0.1.73"
 chrono = { version = "0.4.31", features = ["serde"] }
 clap = { version = "4.4.6", features = ["derive", "env"], optional = true }
-cli-table = "0.4.7"
+cli-table = { version = "0.4.7", optional = true }
 config = { version = "0.13.3", optional = true }
 directories = "5.0.1"
 flate2 = "1.0.27"
@@ -69,4 +69,4 @@ warp = "0.3"
 [features]
 portable = ["mithril-common/portable"]
 bundle_openssl = ["dep:openssl", "dep:openssl-probe"]
-build-binary = ["clap", "config"]
+build-binary = ["clap", "config", "cli-table"]
