Add a cargo doc test step in the ci test job
This compensate the inability of `cargo nextest` to run them because of
a limitations in stable Rust apis (see:
https://nexte.st/book/usage.html#limitations).

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -140,9 +140,10 @@ jobs:
         run: cargo nextest run --no-run ${{ matrix.test-args }}
 
       - name: Run tests
-        shell: bash
-        run: |
-          cargo nextest run --profile ci ${{ matrix.test-args }}
+        run: cargo nextest run --profile ci ${{ matrix.test-args }}
+
+      - name: Run doc tests
+        run: cargo test --doc ${{ matrix.test-args }}
           
       - name: Rename junit file to include runner info
         shell: bash
