Adapt CI, toml, nix, makefiles, & dockerfiles to the new name

--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -87,7 +87,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        project: [ mithril-aggregator, mithril-client, mithril-signer ]
+        project: [ mithril-aggregator, mithril-client-cli, mithril-signer ]
     
     permissions:
       contents: read
