--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,13 +36,13 @@ jobs:
       # We separate the build in 2 steps as we want to avoid side effects with Rust feature unification.
       - name: Cargo build - Tooling
         shell: bash
-        run: cargo build --features portable --release --workspace --exclude mithril-aggregator --exclude mithril-client --exclude mithril-signer --exclude mithril-stm
+        run: cargo build --features portable --release --workspace --exclude mithril-aggregator --exclude mithril-client-cli --exclude mithril-signer --exclude mithril-stm
 
       - name: Build Mithril workspace & publish artifacts
         uses: ./.github/workflows/actions/build-upload-mithril-artifact
         with:
           binaries-build-args: --bin mithril-aggregator --bin mithril-signer --bin mithril-client --features build-binary
-          libraries-build-args: --package mithril-stm --package mithril-client
+          libraries-build-args: --package mithril-stm --package mithril-client-cli
           common-build-args: --features bundle_openssl
 
       - name: Build Debian packages
@@ -50,7 +50,7 @@ jobs:
         run: |
           cargo deb --no-build --package mithril-aggregator
           cargo deb --no-build --package mithril-signer
-          cargo deb --no-build --package mithril-client
+          cargo deb --no-build --package mithril-client-cli
       
       - name: Publish Debian packages
         uses: actions/upload-artifact@v3
@@ -83,13 +83,13 @@ jobs:
         # Only build client on windows & mac
         - os: macos-12
           binaries-build-args: --bin mithril-client --features build-binary
-          libraries-build-args: --package mithril-stm --package mithril-client
+          libraries-build-args: --package mithril-stm --package mithril-client-cli
           common-build-args: --features bundle_openssl
         - os: windows-latest
           # Use `--bins --package <package>` instead of `--bin <package>`, otherwise the 'windows' compatibility
           # hack in mithril common cargo.toml doesn't apply (we have no idea why).
-          binaries-build-args: --bins --package mithril-client --features build-binary
-          libraries-build-args: --package mithril-stm --package mithril-client --no-default-features --features num-integer-backend
+          binaries-build-args: --bins --package mithril-client-cli --features build-binary
+          libraries-build-args: --package mithril-stm --package mithril-client-cli --no-default-features --features num-integer-backend
           common-build-args: --features bundle_openssl
     runs-on: ${{ matrix.os }}
     
@@ -120,9 +120,9 @@ jobs:
             test-args: --features portable --workspace
           # Only test client on windows & mac (since its the only binaries supported for those os for now)
           - os: macos-12
-            test-args: -p mithril-client
+            test-args: -p mithril-client-cli
           - os: windows-latest
-            test-args: -p mithril-client
+            test-args: -p mithril-client-cli
     
     runs-on: ${{ matrix.os }}
     
@@ -295,7 +295,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        project: [ mithril-aggregator, mithril-client, mithril-signer ]
+        project: [ mithril-aggregator, mithril-client-cli, mithril-signer ]
     
     permissions:
       contents: read
