--- a/mithril-client-cli/Makefile
+++ b/mithril-client-cli/Makefile
@@ -11,7 +11,7 @@ all: test build
 
 build:
 	# We use 'portable' feature to avoid SIGILL crashes
-	${CARGO} build --release --features portable,build-binary
+	${CARGO} build --release --features portable,build-binary,bundle_openssl
 	cp ../target/release/mithril-client .
 
 run: build
@@ -39,6 +39,9 @@ doc:
 
 docker-build:
 	cd ../ && docker build -t mithril/mithril-client -f mithril-client-cli/Dockerfile .
+
+docker-build-ci: build
+	cd ../ && docker build -t mithril/mithril-client -f mithril-client-cli/Dockerfile.ci --build-arg DOCKER_IMAGE_FROM .
 
 docker-run:
 	docker run --rm --name='mithril-client' mithril/mithril-client
