--- a/mithril-client/Cargo.toml
+++ b/mithril-client/Cargo.toml
@@ -35,6 +35,9 @@ zstd = "0.13.0"
 [dev-dependencies]
 httpmock = "0.6.8"
 mockall = "0.11.4"
+slog-async = "2.8.0"
+slog-scope = "4.4.0"
+slog-term = "2.9.0"
 warp = "0.3"
 
 [features]
