--- a/mithril-client/Cargo.toml
+++ b/mithril-client/Cargo.toml
@@ -28,7 +28,7 @@ serde_json = "1.0.107"
 slog = "2.7.0"
 tar = "0.4.40"
 thiserror = "1.0.49"
-tokio = { version = "1.32.0", features = [ "sync", "macros", "io-util", "rt", "time", "process" ] }
+tokio = { version = "1.32.0", features = [ "sync", "macros", "io-util", "rt", "time" ] }
 zstd = "0.13.0"
 
 [dev-dependencies]
