--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -296,6 +296,10 @@ jobs:
       fail-fast: false
       matrix:
         project: [ mithril-aggregator, mithril-client-cli, mithril-signer ]
+
+        include:
+          - project: mithril-client-cli
+            package: mithril-client
     
     permissions:
       contents: read
@@ -304,7 +308,7 @@ jobs:
     env:
       PUSH_PACKAGES: ${{ github.event_name == 'push' && (github.ref == 'refs/heads/main' || startsWith('refs/heads/hotfix', github.ref)) }}
       REGISTRY: ghcr.io
-      IMAGE_NAME: ${{ github.repository_owner }}/${{ matrix.project }}
+      PACKAGE: ${{ github.repository_owner }}/${{ matrix.package != '' && matrix.package || matrix.project }}
       DOCKER_FILE: ./${{ matrix.project }}/Dockerfile.ci
       CONTEXT: .
 
@@ -323,7 +327,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: ${{ env.REGISTRY }}/${{ env.PACKAGE }}
           tags: |
             unstable
             type=raw,value=${{ github.base_ref || github.ref_name }}-{{sha}}
