--- a/mithril-client/Cargo.toml
+++ b/mithril-client/Cargo.toml
@@ -29,6 +29,7 @@ slog = "2.7.0"
 tar = "0.4.40"
 thiserror = "1.0.49"
 tokio = { version = "1.32.0", features = [ "sync", "macros", "io-util", "rt", "time" ] }
+uuid = { version = "1.5.0", features = ["v4"] }
 zstd = "0.13.0"
 
 [dev-dependencies]
