--- a/mithril-client/Cargo.toml
+++ b/mithril-client/Cargo.toml
@@ -28,12 +28,19 @@ serde_json = "1.0.107"
 slog = "2.7.0"
 tar = "0.4.40"
 thiserror = "1.0.49"
-tokio = { version = "1.32.0", features = [ "sync", "macros", "io-util", "rt", "time" ] }
+tokio = { version = "1.32.0", features = [
+    "sync",
+    "macros",
+    "io-util",
+    "rt",
+    "time",
+] }
 uuid = { version = "1.5.0", features = ["v4"] }
 zstd = "0.13.0"
 
 [dev-dependencies]
 httpmock = "0.6.8"
+indicatif = { version = "0.17.7", features = ["tokio"] }
 mockall = "0.11.4"
 slog-async = "2.8.0"
 slog-scope = "4.4.0"
