--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Generate cargo doc
         run: |
           cargo doc --no-deps -p mithril-stm -p mithril-common -p mithril-aggregator \
-                    -p mithril-signer -p mithril-client-cli --message-format=json \
+                    -p mithril-signer -p mithril-client -p mithril-client-cli --message-format=json \
                     | clippy-sarif | tee rust-cargo-doc-results.sarif | sarif-fmt
           
           # Update tool sarif metadata from "clippy" to "cargo-doc" (since it's set this way by clippy-sarif)
