Add examples build in to the test job of the CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -145,7 +145,10 @@ jobs:
 
       - name: Run doc tests
         run: cargo test --doc ${{ matrix.test-args }}
-          
+
+      - name: Ensure examples build
+        run: cargo build --examples ${{ matrix.test-args }}
+
       - name: Rename junit file to include runner info
         shell: bash
         if: success() || failure()
