--- a/mithril-common/Cargo.toml
+++ b/mithril-common/Cargo.toml
@@ -52,7 +52,7 @@ slog-scope = "4.4.0"
 sqlite = { version = "0.31.1", features = ["bundled"] }
 strum = { version = "0.25.0", features = ["derive"] }
 thiserror = "1.0.49"
-tokio = { version = "1.32.0", features = ["full"] }
+tokio = { version = "1.32.0", features = ["fs", "io-util", "process", "rt", "sync"] }
 typetag = "0.2.13"
 walkdir = "2.4.0"
 warp = { version = "0.3.6", optional = true }
@@ -74,6 +74,7 @@ reqwest = { version = "0.11.22", features = ["json"] }
 slog-async = "2.8.0"
 slog-scope = "4.4.0"
 slog-term = "2.9.0"
+tokio = { version = "1.32.0", features = ["macros", "time"] }
 
 [build-dependencies]
 glob = "0.3.1"
