--- a/mithril-common/Cargo.toml
+++ b/mithril-common/Cargo.toml
@@ -44,11 +44,7 @@ serde_json = "1.0.107"
 serde_with = "3.3.0"
 serde_yaml = "0.9.25"
 sha2 = "0.10.8"
-slog = { version = "2.7.0", features = [
-    "max_level_trace",
-    "release_max_level_debug",
-] }
-slog-scope = "4.4.0"
+slog = "2.7.0"
 sqlite = { version = "0.31.1", features = ["bundled"] }
 strum = { version = "0.25.0", features = ["derive"] }
 thiserror = "1.0.49"
