--- a/mithril-client/Cargo.toml
+++ b/mithril-client/Cargo.toml
@@ -28,13 +28,7 @@ serde_json = "1.0.107"
 slog = "2.7.0"
 tar = "0.4.40"
 thiserror = "1.0.49"
-tokio = { version = "1.32.0", features = [
-    "sync",
-    "macros",
-    "io-util",
-    "rt",
-    "time",
-] }
+tokio = { version = "1.32.0", features = ["sync"] }
 uuid = { version = "1.5.0", features = ["v4"] }
 zstd = "0.13.0"
 
@@ -45,6 +39,7 @@ mockall = "0.11.4"
 slog-async = "2.8.0"
 slog-scope = "4.4.0"
 slog-term = "2.9.0"
+tokio = { version = "1.32.0", features = ["macros", "rt"] }
 warp = "0.3"
 
 [features]
