--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
         uses: ./.github/workflows/actions/build-upload-mithril-artifact
         with:
           binaries-build-args: --bin mithril-aggregator --bin mithril-signer --bin mithril-client --bin mithril-relay --features bundle_openssl
-          libraries-build-args: --package mithril-stm --package mithril-client
+          libraries-build-args: --package mithril-stm --package mithril-client --features full
 
       - name: Build Debian packages
         shell: bash
@@ -87,12 +87,12 @@ jobs:
         # Only build client on windows & mac
         - os: macos-12
           binaries-build-args: --bin mithril-client --features bundle_openssl
-          libraries-build-args: --package mithril-stm --package mithril-client
+          libraries-build-args: --package mithril-stm --package mithril-client --features full
         - os: windows-latest
           # Use `--bins --package <package>` instead of `--bin <package>`, otherwise the 'windows' compatibility
           # hack in mithril common cargo.toml doesn't apply (we have no idea why).
           binaries-build-args: --bins --package mithril-client-cli --features bundle_openssl
-          libraries-build-args: --package mithril-stm --package mithril-client --no-default-features --features num-integer-backend
+          libraries-build-args: --package mithril-stm --package mithril-client --no-default-features --features num-integer-backend,full
     runs-on: ${{ matrix.os }}
     
     steps:
@@ -119,12 +119,12 @@ jobs:
         
         include:
           - os: ubuntu-22.04
-            test-args: --features portable --workspace
+            test-args: --features portable,full --workspace
           # Only test client on windows & mac (since its the only binaries supported for those os for now)
           - os: macos-12
-            test-args: --package mithril-client --package mithril-client-cli
+            test-args: --package mithril-client --package mithril-client-cli --features full
           - os: windows-latest
-            test-args: --package mithril-client --package mithril-client-cli
+            test-args: --package mithril-client --package mithril-client-cli --features full
     
     runs-on: ${{ matrix.os }}
     
