--- a/mithril-common/Cargo.toml
+++ b/mithril-common/Cargo.toml
@@ -34,7 +34,7 @@ kes-summed-ed25519 = { version = "0.2.1", features = [
 ] }
 mockall = "0.11.4"
 nom = "7.1.3"
-pallas-network = { git = "https://github.com/txpipe/pallas.git", version = "0.19.1" }
+pallas-network = { git = "https://github.com/txpipe/pallas.git", branch = "main" }
 rand_chacha = "0.3.1"
 rand_core = "0.6.4"
 rayon = "1.8.0"
