--- a/mithril-client-cli/Cargo.toml
+++ b/mithril-client-cli/Cargo.toml
@@ -58,7 +58,7 @@ zstd = "0.13.0"
 
 [dev-dependencies]
 httpmock = "0.6.8"
-mithril-common = { path = "../mithril-common" }
+mithril-common = { path = "../mithril-common", features = ["test_http_server"] }
 mockall = "0.11.4"
 warp = "0.3"
 
