--- a/mithril-client/Cargo.toml
+++ b/mithril-client/Cargo.toml
@@ -35,6 +35,7 @@ zstd = "0.13.0"
 [dev-dependencies]
 httpmock = "0.6.8"
 indicatif = { version = "0.17.7", features = ["tokio"] }
+mithril-common = { path = "../mithril-common", features = ["test_http_server"] }
 mockall = "0.11.4"
 slog-async = "2.8.0"
 slog-scope = "4.4.0"
