--- a/mithril-common/Cargo.toml
+++ b/mithril-common/Cargo.toml
@@ -56,7 +56,7 @@ thiserror = "1.0.49"
 tokio = { version = "1.32.0", features = ["full"] }
 typetag = "0.2.13"
 walkdir = "2.4.0"
-warp = "0.3.6"
+warp = { version = "0.3.6", optional = true }
 
 [target.'cfg(not(windows))'.dependencies]
 # non-windows: use default rug backend
@@ -83,9 +83,15 @@ serde_yaml = "0.9.25"
 
 [features]
 default = []
+
+allow_skip_signer_certification = []
+# portable feature avoids SIGILL crashes on CPUs not supporting Intel ADX instruction set when built on CPUs that support it
 portable = [
     "mithril-stm/portable",
-] # portable feature avoids SIGILL crashes on CPUs not supporting Intel ADX instruction set when built on CPUs that support it
-allow_skip_signer_certification = []
+]
+
+# Enable all tests tools
+test_tools = ["apispec", "test_http_server"]
 # Enable tools to helps validate conformity to an OpenAPI specification
-apispec = ["glob", "http", "jsonschema"]
+apispec = ["glob", "http", "jsonschema", "warp"]
+test_http_server = ["warp"]
