--- a/mithril-common/Cargo.toml
+++ b/mithril-common/Cargo.toml
@@ -34,7 +34,7 @@ kes-summed-ed25519 = { version = "0.2.1", features = [
 ] }
 nom = "7.1.3"
 rand_chacha = "0.3.1"
-rand_core = "0.6.4"
+rand_core = { version = "0.6.4", features = ["getrandom"] }
 rayon = "1.8.0"
 semver = "1.0.19"
 serde = { version = "1.0.188", features = ["derive"] }
