--- a/mithril-client/Cargo.toml
+++ b/mithril-client/Cargo.toml
@@ -1,13 +1,15 @@
 [package]
 name = "mithril-client"
 version = "0.5.4"
-description = "Mithril Client library"
+description = "Mithril client library"
 authors = { workspace = true }
 edition = { workspace = true }
 documentation = { workspace = true }
 homepage = { workspace = true }
 license = { workspace = true }
 repository = { workspace = true }
+categories = ["cryptography"]
+include = ["**/*.rs", "Cargo.toml", "README.md", ".gitignore"]
 
 [lib]
 crate-type = ["lib", "cdylib", "staticlib"]
