Make cargo publication sequential in release.yml

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -167,6 +167,7 @@ jobs:
   publish-crate:
     strategy:
       fail-fast: false
+      max-parallel: 1
       matrix:
         package: [ mithril-stm, mithril-common, mithril-client ]
         include:
