Fix crates publication in release.yml

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -166,7 +166,7 @@ jobs:
 
   publish-crate:
     strategy:
-      fail-fast: false
+      fail-fast: true
       max-parallel: 1
       matrix:
         package: [ mithril-stm, mithril-common, mithril-client ]
