--- a/mithril-common/Cargo.toml
+++ b/mithril-common/Cargo.toml
@@ -33,7 +33,7 @@ kes-summed-ed25519 = { version = "0.2.1", features = [
     "sk_clone_enabled",
 ] }
 nom = "7.1.3"
-pallas-network = { git = "https://github.com/txpipe/pallas.git", branch = "main" }
+pallas-network = { git = "https://github.com/falcucci/pallas.git", branch = "fix/build-errors" }
 rand_chacha = "0.3.1"
 rand_core = { version = "0.6.4", features = ["getrandom"] }
 rayon = "1.8.0"
