--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -466,6 +466,7 @@ jobs:
         - environment: testing-preview
           environment_prefix: testing
           cardano_network: preview
+          mithril_use_p2p_network: false
           mithril_api_domain: api.mithril.network
           mithril_protocol_parameters: |
             {
@@ -525,6 +526,7 @@ jobs:
           google_compute_instance_boot_disk_size: ${{ matrix.google_compute_instance_boot_disk_size }}
           google_compute_instance_data_disk_size: ${{ matrix.google_compute_instance_data_disk_size }}
           google_application_credentials: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
+          mithril_use_p2p_network: ${{ matrix.mithril_use_p2p_network }}
           mithril_api_domain: ${{ matrix.mithril_api_domain }}
           mithril_image_id: ${{ env.DOCKER_IMAGE_ID }}
           mithril_protocol_parameters: ${{ toJSON(matrix.mithril_protocol_parameters) }}
