--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -31,6 +31,7 @@ jobs:
         - environment: dev-preview
           environment_prefix: dev
           cardano_network: preview
+          mithril_use_p2p_network: false
           mithril_api_domain: api.mithril.network
           mithril_protocol_parameters: |
             {
@@ -71,12 +72,14 @@ jobs:
           environment_prefix: ${{ matrix.environment_prefix }}
           environment: ${{ matrix.environment }}
           cardano_network: ${{ matrix.cardano_network }}
+          cardano_node_version: ${{ vars.CARDANO_NODE_VERSION }}
           google_region: ${{ matrix.google_region }}
           google_zone: ${{ matrix.google_zone }}
           google_machine_type: ${{ matrix.google_machine_type }}
           google_compute_instance_boot_disk_size: ${{ matrix.google_compute_instance_boot_disk_size }}
           google_compute_instance_data_disk_size: ${{ matrix.google_compute_instance_data_disk_size }}
           google_application_credentials: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
+          mithril_use_p2p_network: ${{ matrix.mithril_use_p2p_network }}
           mithril_api_domain: ${{ matrix.mithril_api_domain }}
           mithril_image_id: ${{ inputs.mithril_image_id }}
           mithril_protocol_parameters: ${{ toJSON(matrix.mithril_protocol_parameters) }}
