--- a/mithril-relay/Cargo.toml
+++ b/mithril-relay/Cargo.toml
@@ -13,6 +13,7 @@ repository = { workspace = true }
 [dependencies]
 anyhow = "1.0.75"
 clap = { version = "4.4.6", features = ["derive", "env"] }
+config = "0.13.3"
 libp2p = { version = "0.53", features = [
     "tokio",
     "gossipsub",
