--- a/mithril-relay/Cargo.toml
+++ b/mithril-relay/Cargo.toml
@@ -41,5 +41,6 @@ slog-async = "2.8.0"
 slog-bunyan = "2.4.0"
 slog-scope = "4.4.0"
 slog-term = "2.9.0"
+thiserror = "1.0.49"
 tokio = { version = "1.32.0", features = ["full"] }
 warp = "0.3.6"
