test for msd message service

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,6 @@ edition = "2021"
 homepage = "https://mithril.network"
 license = "Apache-2.0"
 repository = "https://github.com/input-output-hk/mithril/"
+
+[workspace.lints.rust]
+unsafe_code = "forbid"
