Make mithril-client examples full crates
Two seperates crates were created:
- `client-snapshot`
- `client-mithril-stake-distribution`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ resolver = "2"
 
 members = [
   "demo/protocol-demo",
+  "examples/client-mithril-stake-distribution",
+  "examples/client-snapshot",
   "mithril-aggregator",
   "mithril-client",
   "mithril-client-cli",
